// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryTile should render a Link if path is not an external url 1`] = `
<Col
  className="tile"
  md={3}
  sm={4}
  xs={6}
>
  <Connect(Link)
    href="/augsburg/de/willkommen"
  >
    <div
      className="thumbnailSizer"
    >
      <div
        className="thumbnail"
      >
        <img
          src="https://cms.integreat-ap…03/Beratung-150x150.png"
        />
      </div>
    </div>
    <div
      className="title"
    >
      Willkommen
    </div>
  </Connect(Link)>
</Col>
`;

exports[`CategoryTile should render a a-Tag if path is not an external url 1`] = `
<Col
  className="tile"
  md={3}
  sm={4}
  xs={6}
>
  <a
    href="/augsburg/de/willkommen"
  >
    <div
      className="thumbnailSizer"
    >
      <div
        className="thumbnail"
      >
        <img
          src="https://cms.integreat-ap…03/Beratung-150x150.png"
        />
      </div>
    </div>
    <div
      className="title"
    >
      Willkommen
    </div>
  </a>
</Col>
`;
